Rework CLI and Flink configuration (#1329)